--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tmdb-ts",
+  "name": "tmdb-ts-wrapper",
   "version": "1.0.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -24,12 +24,12 @@
     "jest": "^27.5.1",
     "ts-jest": "^27.1.4"
   },
-  "homepage": "https://github.com/AaronWLChan/tmdb-ts",
+  "homepage": "https://github.com/AaronWLChan/tmdb-ts-wrapper",
   "repository": {
     "type": "git",
-    "url": "https://github.com/AaronWLChan/tmdb-ts.git"
+    "url": "https://github.com/AaronWLChan/tmdb-ts-wrapper.git"
   },
   "bugs": {
-    "url": "https://github.com/AaronWLChan/tmdb-ts/issues"
+    "url": "https://github.com/AaronWLChan/tmdb-ts-wrapper/issues"
   }
 }
